# Flat_Shading

./: CMakeLists.txt  README.md  main.cpp  triangle.h
